# radixtarget

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build-wheels.yml  python-tests.yml  rust-tests.yml  tests.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs
pyradix/: __init__.py  pyradix.py
pyradix/test/: cidrs.txt  test_pyradix.py
pyradix/tree/: base.py  dns.py
radixtarget/: __init__.py  helpers.py  radixtarget.py
radixtarget/test/: test_pyradix.py  test_radixtarget.py  test_rust_bindings.py  test_rust_radixtarget.py
radixtarget/tree/: base.py  dns.py  ip.py
radixtarget_rust/: Cargo.toml
radixtarget_rust/src/: base.rs  dns.rs  ip.rs  lib.rs  target.rs
src/: dns.rs  fast_ip.rs  ip.rs  lib.rs  target.rs  treebitmap.rs  utils.rs
src/node/: base.rs  dns.rs  ip.rs  mod.rs
src/treebitmap/: allocator.rs  node.rs
tests/: temp_readme_examples.rs
