[package]
name = "radixtarget"
version = "4.2.0"
edition = "2024"
description = "Fast radix tree implementation for IP addresses and hostnames with target matching"
license = "GPL-3.0"
repository = "https://github.com/blacklanternsecurity/radixtarget"
authors = ["TheTechromancer <thetechromancer@protonmail.com>"]
keywords = ["radix", "tree", "ip", "network", "dns"]
categories = ["data-structures", "network-programming"]

[lib]
name = "radixtarget"
crate-type = ["rlib", "cdylib"]

[dependencies]
idna = "1.0.3"
ipnet = "2.10"
pyo3 = { version = "0.27", optional = true }
seahash = "4.1"

[features]
default = []
py = ["dep:pyo3"]

[dev-dependencies]
rand = "0.8"
