[tool.poetry]
name = "radixtarget"
version = "2.0.0"
description = "Check whether an IP address belongs to a cloud provider"
authors = ["TheTechromancer"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/blacklanternsecurity/radixtarget"
homepage = "https://github.com/blacklanternsecurity/radixtarget"

[tool.poetry.urls]
"PyPi" = "https://pypi.org/project/radixtarget/"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = ">=5,<7"
ruff = ">=0.8.1,<0.10.0"

[tool.ruff]
line-length = 119
lint.ignore = ["E402", "E713", "E721", "E741", "F401", "F403", "F405"]

[tool.poetry-dynamic-versioning]
enable = true
metadata = false
format-jinja = 'v3.0.{{ distance }}'

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
