[project]
name = "radixtarget"
version = "4.0.1rc1"
description = "Fast radix tree for IP addresses and DNS names"
authors = [{name = "TheTechromancer"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["radix", "tree", "ip", "dns", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/blacklanternsecurity/radixtarget"
Repository = "https://github.com/blacklanternsecurity/radixtarget"
"Bug Tracker" = "https://github.com/blacklanternsecurity/radixtarget/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "radixtarget._radixtarget"

[tool.ruff]
line-length = 119
lint.ignore = ["E402", "E713", "E721", "E741", "F401", "F403", "F405"]


[tool.poetry.group.dev.dependencies]
maturin = "^1.9.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.8.1"
