[package]
name = "radixtarget-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
radixtarget = { path = "..", package = "radixtarget" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
ip_network = "0.4"
ip_network_table = "0.2"
